// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`switcher Renders \`switcher\` with custom props 1`] = `
<div
  class="widget-settings-flat-item v-list-item theme--light"
  tabindex="-1"
>
  <div
    class="v-list-item__content"
  >
    <div
      class="v-list-item__title"
    >
      Custom title
    </div>
  </div>
  <div
    class="v-list-item__action mr-3"
  >
    <input
      class="v-switch ma-0 pa-0"
      color="primary"
      hide-details=""
      type="checkbox"
    />
  </div>
</div>
`;

exports[`switcher Renders \`switcher\` with default and required props 1`] = `
<div
  class="widget-settings-flat-item v-list-item theme--light"
  tabindex="-1"
>
  <div
    class="v-list-item__content"
  >
    <div
      class="v-list-item__title"
    >
    </div>
  </div>
  <div
    class="v-list-item__action mr-3"
  >
    <input
      class="v-switch ma-0 pa-0"
      color="primary"
      hide-details=""
      type="checkbox"
    />
  </div>
</div>
`;
